; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/ntb_hw/extr_ntb_hw_plx.c_ntb_plx_mw_get_wc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/ntb_hw/extr_ntb_hw_plx.c_ntb_plx_mw_get_wc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ntb_plx_softc = type { i32, %struct.ntb_plx_mw_info* }
%struct.ntb_plx_mw_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*)* @ntb_plx_mw_get_wc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ntb_plx_mw_get_wc(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.ntb_plx_softc*, align 8
  %9 = alloca %struct.ntb_plx_mw_info*, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call %struct.ntb_plx_softc* @device_get_softc(i32 %11)
  store %struct.ntb_plx_softc* %12, %struct.ntb_plx_softc** %8, align 8
  %13 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %8, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ntb_plx_user_mw_to_idx(%struct.ntb_plx_softc* %13, i32 %14, i32* %10)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %8, align 8
  %18 = getelementptr inbounds %struct.ntb_plx_softc, %struct.ntb_plx_softc* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp uge i32 %16, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %3
  %22 = load i32, i32* @EINVAL, align 4
  store i32 %22, i32* %4, align 4
  br label %39

23:                                               ; preds = %3
  %24 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %8, align 8
  %25 = getelementptr inbounds %struct.ntb_plx_softc, %struct.ntb_plx_softc* %24, i32 0, i32 1
  %26 = load %struct.ntb_plx_mw_info*, %struct.ntb_plx_mw_info** %25, align 8
  %27 = load i32, i32* %6, align 4
  %28 = zext i32 %27 to i64
  %29 = getelementptr inbounds %struct.ntb_plx_mw_info, %struct.ntb_plx_mw_info* %26, i64 %28
  store %struct.ntb_plx_mw_info* %29, %struct.ntb_plx_mw_info** %9, align 8
  %30 = load %struct.ntb_plx_mw_info*, %struct.ntb_plx_mw_info** %9, align 8
  %31 = getelementptr inbounds %struct.ntb_plx_mw_info, %struct.ntb_plx_mw_info* %30, i32 0, i32 0
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = load i32, i32* %10, align 4
  %34 = zext i32 %33 to i64
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %7, align 8
  store i32 %37, i32* %38, align 4
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %23, %21
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local %struct.ntb_plx_softc* @device_get_softc(i32) #1

declare dso_local i32 @ntb_plx_user_mw_to_idx(%struct.ntb_plx_softc*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
